--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 :root {
     --color-green:#50fa7b;
+    --color-purple:#7159c1; 
 }
 
 
@@ -77,4 +78,46 @@ header {
 #links-footer a {
     border-bottom: 1px solid var(--color-green);
     
+}
+
+/* =====CARDS===== */
+
+
+.cards {
+
+    max-width: 800px;
+    margin: 0 auto;
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 10px;
+}
+
+
+.card {
+    background-color:#7159c1 ;
+
+}
+
+.card__image-container img{
+    width: 100%
+
+}
+
+.card__info,
+.card__content {
+    padding:24px;
+}
+
+.card__info{
+
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.card__price {
+    background-color: var(--color-purple) ;
+    filter: brightness(90%);
+    padding: 5px 20px;
+    border-radius: 20px;
+    text-align: center;
 }
